@@ -35,13 +35,14 @@ booster_module_load(booster_t *booster)
   char *booster_path;
   char *booster_sym;
   char *error_s;
+  int err;
 
-  asprintf(&booster_path, BOOSTER_DIR "/booster-%s.so", booster->name);
-  if (!booster_path)
+  err = asprintf(&booster_path, BOOSTER_DIR "/booster-%s.so", booster->name);
+  if (err)
     die(40, "allocating booster module path\n");
 
-  asprintf(&booster_sym, "booster_%s_api", booster->name);
-  if (!booster_sym)
+  err = asprintf(&booster_sym, "booster_%s_api", booster->name);
+  if (err)
     die(40, "allocating booster symbol path\n");
 
   /* Load the booster module. */
